--- a/src/app/cliente/cadastrar/cadastrar.component.css
+++ b/src/app/cliente/cadastrar/cadastrar.component.css
@@ -1,16 +1,31 @@
 .container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    height: 50vh;
+    background-color: #f5f5f5;
+}
+
+.card {
+    width: 700px;
+    padding: 20px;
+    text-align: center;
+}
+
+.card-title {
+    background-color: #3f51b5a1;
+    color: white;
+    padding: 10px;
+    font-size: 18px;
+    text-align: left;
 }
 
 .full-width {
     width: 100%;
 }
 
-.buttons {
+.button-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 20px;
 }
