--- a/src/app/cliente/cadastrar/cadastrar.component.html
+++ b/src/app/cliente/cadastrar/cadastrar.component.html
@@ -1,28 +1,22 @@
+<mat-toolbar color="primary">
+    Angular
+</mat-toolbar>
+
 <div class="container">
-    <mat-toolbar color="primary">Angular</mat-toolbar>
+    <mat-card class="card">
+        <mat-card-title class="card-title">Cadastro de Clientes</mat-card-title>
 
-    <mat-card>
-        <mat-card-title>Cadastro de Clientes</mat-card-title>
-
-        <mat-form-field class="full-width">
+        <mat-form-field appearance="fill" class="full-width">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Digite o nome">
+            <input matInput placeholder="Digite seu nome">
         </mat-form-field>
 
-        <mat-form-field class="full-width">
+        <mat-form-field appearance="fill" class="full-width">
             <mat-label>Idade</mat-label>
-            <input matInput type="number" placeholder="Digite a idade">
+            <input matInput type="number" placeholder="Digite sua idade">
         </mat-form-field>
 
-        <mat-form-field class="full-width">
-            <mat-label>Escolha uma opção</mat-label>
-            <mat-select>
-                <mat-option value="opcao1">Opção 1</mat-option>
-                <mat-option value="opcao2">Opção 2</mat-option>
-            </mat-select>
-        </mat-form-field>
-
-        <div class="buttons">
+        <div class="button-container">
             <button mat-raised-button color="primary">Salvar</button>
             <button mat-raised-button color="warn">Cancelar</button>
         </div>
